[package]
name = "embedded_graph"
version = "0.1.0"
authors = ["Michal Datberg <michaldatberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = { version = "0.6.1", features = ["nalgebra_support"] }
embedded-graphics-simulator = "0.2"
sdl2 = "0.32.2"
nalgebra = { version = "0.20", default-features = false }